--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
   "name": "qroom-1.2",
   "version": "1.0.0",
-  "main": "server.js",
-  "type": "module",
+  "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
-    "start": "nodemon server.js"
+    "start": "nodemon server.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/mongoose": "^5.11.97",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "express-flash": "^0.0.2",
     "express-graphql": "^0.12.0",
     "express-handlebars": "^6.0.2",
@@ -28,7 +30,7 @@
     "jsdom": "^19.0.0",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
-    "mongoose": "^6.0.14",
+    "mongoose": "^6.10.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "nodemon": "^2.0.16",
