--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
