--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 PORT = 3000
 DATABASE = mongodb+srv://QRoom:900mylife@qroom.zlbunot.mongodb.net/QRoom
+
+JWT_SECRET = rovarhanawavan
+JWT_AGE = 2592000
