Just Fixing Debug For node

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,14 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "trace": true,
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\server.ts",
+            "program": "${workspaceFolder}/server.ts",
             "outFiles": [
                 "${workspaceFolder}/**/*.js"
             ]
