--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "1.0.0",
   "main": "server.ts",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.ts",
     "tsc": "tsc",
-    "start": "nodemon server.ts"
+    "start": "npm run tsc && node dist/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "bcrypt": "^5.0.1",
@@ -36,7 +39,6 @@
     "@types/connect-flash": "^0.0.37",
     "@types/cookie-parser": "^1.4.3",
     "@types/ejs": "^3.1.2",
-    "@types/express": "^4.17.17",
     "@types/express-flash": "^0.0.2",
     "@types/express-session": "^1.17.7",
     "@types/jquery": "^3.5.16",
