Created Exception For Duplicate Emails

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/passport-local": "^1.0.35",
     "@types/validator": "^13.7.14",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.3"
   },
   "description": ""
