--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,11 +8,17 @@
             "trace": true,
             "type": "node",
             "request": "launch",
-            "name": "Launch Program",
+            "name": "Debug Typescript",
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}/server.ts",
+            "program": "${workspaceFolder}\\server.ts",
+            "runtimeArgs": [
+                "-r",
+                "ts-node/register",
+                "-r",
+                "tsconfig-paths/register"
+            ],
             "outFiles": [
                 "${workspaceFolder}/**/*.js"
             ]
