--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -31,7 +31,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.16",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^10.0.28-alpha",
