--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "aos": "^2.3.4",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.5.1",
@@ -32,9 +33,11 @@
     "nodemon": "^2.0.16",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "typed.js": "^2.0.15",
     "util": "^0.12.5"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "@types/bcrypt": "^10.0.28-alpha",
     "@types/body-parser": "^1.19.2",
     "@types/connect-flash": "^0.0.37",
