--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.16",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
@@ -51,6 +52,7 @@
     "@types/lodash": "^4.14.192",
     "@types/morgan": "^1.9.4",
     "@types/multer": "^1.4.7",
+    "@types/nodemailer": "^6.4.7",
     "@types/nodemon": "^1.19.2",
     "@types/owl.carousel": "^2.3.3",
     "@types/passport": "^1.0.12",
