--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
+    "@types/redis": "^4.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "aos": "^2.3.4",
     "bcrypt": "^5.1.0",
@@ -34,6 +35,7 @@
     "nodemon": "^2.0.16",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "redis": "^4.6.5",
     "typed.js": "^2.0.15",
     "util": "^0.12.5"
   },
